--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,2 +1,25 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
+
+
+h1 {
+  font-size: 35px;
+  text-align: center;
+}
+
+.board {
+  height: 600px;
+  width: 600px;
+  margin: 0 auto;
+}
+
+.row {
+  height: 199px;
+}
+
+
+.field{
+  border: 5px solid black;
+  display: block;
+  height: 100%;
+}
