--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -11,6 +11,11 @@ h1 {
   height: 600px;
   width: 600px;
   margin: 0 auto;
+  display: block;
+  font-size: 10em;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
 }
 
 .row {
