fixed the check draw function and made a .hide and .show for board on "play new game"

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -25,6 +25,7 @@ h1 {
   width: 200px;
   border: 2px solid black;
   margin: 0 auto;
+  display: none;
   margin-top: 35px;
   text-align: center;
   justify-content: center;
@@ -37,7 +38,7 @@ h1 {
   height: 600px;
   width: 600px;
   margin: 0 auto;
-  display: block;
+  display: none;
   font-size: 10em;
   justify-content: center;
   align-items: center;
