Added fonts and styles Added modal functions fixed draw function Added hide/shows to buttons added check for user function to make sure to check store on sign out added scss styling to whole page

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,11 +1,9 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
-
-
-
 h1 {
-  font-size: 35px;
+  font-size: 60px;
   text-align: center;
+  font-family: 'chalky chicken';
 }
 
 #sign-in {
@@ -25,24 +23,6 @@ h1 {
 .btn-create {
   margin: 20px auto;
   display: none;
-  max-width: 150px;
-}
-
-
-
-
-
-.btn-primary {
-  float:left;
-  margin-top: 15px;
-  margin-left: 25px;
-}
-
-.btn-danger {
-  font-weight: bolder;
-  color: black;
-  margin-left: auto;
-  align-items: center;
 }
 
 .banner {
@@ -74,6 +54,9 @@ h1 {
 .board {
   height: 600px;
   width: 600px;
+  color: #fff;
+  background: #252525;
+  padding: 30px;
   margin: 0 auto;
   display: none;
   font-size: 10em;
@@ -83,12 +66,49 @@ h1 {
 }
 
 .row {
-  height: 199px;
+  height: 33.3%;
 }
 
 
-.field{
-  border: 5px solid black;
+.field {
   display: block;
   height: 100%;
 }
+
+.board .row:nth-child(1),
+.board .row:nth-child(2){
+  border-bottom: 5px solid #fff;
+}
+
+.board .field:nth-child(2n){
+  border-left: 5px solid #fff;
+  border-right: 5px solid #fff;
+}
+
+.showgames {
+  height: auto;
+  width: auto;
+  margin: 0 auto;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  font-size: 25px;
+  font-weight: bolder;
+}
+
+
+
+
+@media (max-width: 599px) {
+  .board {
+    width: 320px;
+    height: 320px;
+  }
+
+  .field {
+    height: 85px;
+    text-align: center;
+    font-size: 35px;
+    padding-top: 15px;
+  }
+};
