--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -3,7 +3,8 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 h1 {
   font-size: 60px;
   text-align: center;
-  font-family: 'chalky chicken';
+  font-family: 'Rock Salt', cursive;
+;
 }
 
 #sign-in {
@@ -17,6 +18,10 @@ h1 {
 }
 
 #show-game {
+  display: none;
+}
+
+.btn-index {
   display: none;
 }
 
@@ -74,6 +79,8 @@ h1 {
 .field {
   display: block;
   height: 100%;
+  font-family: 'Rock Salt', cursive;
+
 }
 
 .board .row:nth-child(1),
