reset paly game and show games to display none

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -29,13 +29,13 @@ h1 {
 }
 
 .btn-index {
-  display: block;
+  display: none;
   margin: 0 auto;
   width: 200px;
 }
 
 .btn-create {
-  display: block;
+  display: none;
   margin: 0 auto;
   width: 200px;
 }
